@@ -1,3 +1,12 @@
+2018-09-26  Andreas Schwab  <schwab@suse.de>
+
+	[BZ #23707]
+	* sysdeps/powerpc/powerpc32/dl-start.S: Add unwind information.
+	* elf/Makefile (tests): Add tst-unwind-ctor.
+	(modules-names): Add tst-unwind-ctor-lib.
+	($(objpfx)tst-unwind-ctor): Depend on
+	$(objpfx)tst-unwind-ctor-lib.so.
+
 2018-09-26  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/unix/sysv/linux/bits/mman-map-flags-generic.h: New
